--- a/main/templates/subject/subject_home/graph/graph_card.html
+++ b/main/templates/subject/subject_home/graph/graph_card.html
@@ -2,7 +2,7 @@
 <div class="card" id="id_graph_card">                  
     <div class="card-header fw-bold">                
         <span class="align-middle">
-            Day [[session.current_parameter_set_period.graph_start_period_number]] to [[session.current_parameter_set_period.graph_end_period_number]]
+            Day [[session.current_parameter_set_period.graph_1_start_period_number]] to [[session.current_parameter_set_period.graph_1_end_period_number]]
         </span>
         
 
