--- a/main/templates/staff/staff_session_parameters/periods/periods_card.html
+++ b/main/templates/staff/staff_session_parameters/periods/periods_card.html
@@ -37,7 +37,7 @@
                                     Show<br>Graph 1/2
                                 </th> 
                                 <th scope="col" class = "text-nowrap">
-                                    Graph<br>Range
+                                    Graph<br>Range 1/2
                                 </th>
                                 <th scope="col" class = "text-nowrap">
                                     Pay<br>Block
