--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -50,11 +50,11 @@
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
                 <span v-if="session_player.group_checked_in_today">
-                    Your potential group earnings today:
+                    Your group earnings today:
                 </span>
                 <span>
                     Your potential group earnings today:<br>
-                    (Your team is not fully checked in)
+                    <span style="color:red">(Your team is not fully checked in)</span>
                 </span>
 
             </div>
