--- a/main/templates/subject/subject_home/summary/summary_card.html
+++ b/main/templates/subject/subject_home/summary/summary_card.html
@@ -32,6 +32,14 @@
         </div> 
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
+                Last Fitbit to phone sync:
+            </div>
+            <div class="col text-start ps-1" v-bind:style="session_player.fitbit_synced_today ? [] : [{color:'red'}]">
+                [[session_player.fitbit_last_synced]]
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-end pe-1 text-nowrap">
                 Your total earnings for day [[session_player.current_block_earnings.range.start_day]] to day [[session_player.current_block_earnings.range.end_day]]:
             </div>
             <div class="col text-start ps-1">
