--- a/main/templates/subject/subject_home/summary/summary_card.html
+++ b/main/templates/subject/subject_home/summary/summary_card.html
@@ -19,7 +19,7 @@
                 Today's wrist time:
             </div>
             <div class="col text-start ps-1">
-               {{todays_wrist_minutes}}
+               [[session_player.todays_wrist_minutes]]
             </div>
         </div>  
         <div class="row">
@@ -27,7 +27,7 @@
                 Today's zone minutes:
             </div>
             <div class="col text-start ps-1">
-                {{todays_zone_minutes}}
+                [[session_player.todays_zone_minutes]]
             </div>
         </div> 
         <div class="row">
