--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -32,7 +32,6 @@
 
 <!-- modals -->
 
-
 <!-- instructions -->
 <div class="row justify-content-lg-center mt-4" v-cloak v-show="session.current_experiment_phase == 'Instructions'">
     <div class="col-md">
@@ -43,21 +42,36 @@
 <!-- experiment -->
 
 <!-- not started -->
-<div class="row justify-content-center mt-4" v-cloak v-show="session.started == false">
-    <div class="col text-center">
-        Please wait
+<div class="row justify-content-center mt-4" v-cloak v-show="session.started == false || session.is_before_first_period">
+    <div class="col-12 fs-4 fw-bold text-center">
+        <br>
+        <br>
+        <br>
+        <br>
+        Please wait for the experiment to begin.
+    </div>
+</div>
+
+<!-- complete -->
+<div class="row justify-content-center mt-4" v-cloak v-show="session.finished || session.is_after_last_period">
+    <div class="col-12 fs-4 fw-bold text-center">
+        <br>
+        <br>
+        <br>
+        <br>
+        The experiment is complete, thank you for your participation.
     </div>
 </div>
 
 <!-- graph -->
-<div class="row justify-content-center mt-4" v-cloak v-show="session.current_experiment_phase != 'Done'">
+<div class="row justify-content-center mt-4" v-cloak v-show="!session.is_after_last_period && session.started && !session.is_before_first_period">
     <div class="col-md">
         {%include "subject/subject_home/graph/graph_card.html"%}                
     </div>
 </div>
 
 <!-- summary -->
-<div class="row justify-content-center mt-4" v-cloak v-show="session.current_experiment_phase != 'Done'">
+<div class="row justify-content-center mt-4" v-cloak v-show="!session.is_after_last_period && session.started && !session.is_before_first_period && first_load_done">
 
     <div class="col-lg">
         {%include "subject/subject_home/summary/summary_card.html"%}     
@@ -68,22 +82,10 @@
     </div>
 </div>
 
-<div class="row justify-content-center mt-4" v-cloak v-show="session.current_experiment_phase == 'Done'">
-    <div class="col-12 fs-4 fw-bold text-center">
-        <br>
-        <br>
-        <br>
-        <br>
-        The session is complete, thank you for your participation!              
-    </div>    
-</div>
-
 <div class="row justify-content-center mt-4">
     <div class="col-md text-end text-muted">
         <span class="align-middle">Client [[session_player.player_number]]</span>
     </div>  
 </div>
-
-
 
 {% endblock %}
