--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -1,5 +1,5 @@
 
-<div class="card" v-show="first_load_done && session.started && session.current_experiment_phase!='Selection'">                  
+<div class="card">                  
     <div class="card-header fw-bold">                
         <span class="align-middle">Check In</span>            
 
