Update expermient end date on import parameters and end early. Fixes #7.

--- a/main/templates/staff/staff_session/control/control_card.html
+++ b/main/templates/staff/staff_session/control/control_card.html
@@ -60,6 +60,7 @@
                         v-bind:disabled="reconnecting || 
                                          working || 
                                          session.started===false || 
+                                         session.is_last_period ||
                                          session.locked">
                         <span v-if="session.current_period!=session.parameter_set.parameter_set_periods.length">End Early <i class="far fa-hand-paper"></i></span>
                         <span v-else>***Final Period***</span>
