--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -88,4 +88,10 @@
     </div>  
 </div>
 
+<div class="row justify-content-center mt-1">
+    <div class="col-md text-end text-muted">
+        <span class="align-middle">v[[software_version]]</span>
+    </div>  
+</div>
+
 {% endblock %}
