Download earnings block from server. Fixes #11.

--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -101,6 +101,12 @@
 
         <div class="row mt-2">
             <div class="col">
+                {%include "staff/staff_session/payments/payments_card.html"%}
+            </div>                
+        </div>
+
+        <div class="row mt-2">
+            <div class="col">
                 {%include "staff/staff_session/data/data_card.html"%}
             </div>                
         </div>
