--- a/main/templates/subject/subject_home/summary/summary_card.html
+++ b/main/templates/subject/subject_home/summary/summary_card.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
-                Your total earnings for day [[session_player.current_block_earnings.range.start_day]] to day [[session_player.current_block_earnings.range.end_day]]:
+                Your total earnings for day [[session_player.current_block_earnings.range.start_day.period_number]] to day [[session_player.current_block_earnings.range.end_day.period_number]]:
             </div>
             <div class="col text-start ps-1">
                 $[[session_player.current_block_earnings.total]]
