prevent paramter update after start. fixes #13.

--- a/main/templates/staff/staff_session_parameters/players/edit_parameterset_player_modal.html
+++ b/main/templates/staff/staff_session_parameters/players/edit_parameterset_player_modal.html
@@ -30,7 +30,7 @@
                         class="btn btn-outline-primary"
                         title="Update player settings."
                         v-on:click = "sendUpdateParametersetPlayer()"
-                        v-bind:disabled="reconnecting || working">
+                        v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
