--- a/main/templates/staff/staff_session_parameters/players/players_card.html
+++ b/main/templates/staff/staff_session_parameters/players/players_card.html
@@ -62,7 +62,7 @@
                                 class="btn btn-outline-danger"
                                 title="Remove player from parameter set."
                                 v-on:click = "sendRemoveParameterSetPlayer()"
-                                v-bind:disabled="reconnecting || working ||  session.parameter_set.parameter_set_players.length <= 1">
+                                v-bind:disabled="reconnecting || working ||  session.parameter_set.parameter_set_players.length <= 1 || session.started">
                             Delete <i class="fas fa-minus"></i> 
                         </button>
                     </div>
