--- a/main/templates/staff/staff_session_parameters/periods/edit_parameterset_period_payment_modal.html
+++ b/main/templates/staff/staff_session_parameters/periods/edit_parameterset_period_payment_modal.html
@@ -23,7 +23,7 @@
                 <button type="button"
                         class="btn btn-outline-primary"
                         v-on:click = "sendUpdatePayment()"
-                        v-bind:disabled="reconnecting || working">
+                        v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
