--- a/main/templates/staff/staff_session_parameters/players/edit_parameterset_player_group_modal.html
+++ b/main/templates/staff/staff_session_parameters/players/edit_parameterset_player_group_modal.html
@@ -29,7 +29,7 @@
                 <button type="button"
                         class="btn btn-outline-primary"
                         v-on:click = "sendUpdateParametersetPlayerGroup()"
-                        v-bind:disabled="reconnecting || working">
+                        v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
