--- a/main/templates/staff/staff_session_parameters/periods/periods_card.html
+++ b/main/templates/staff/staff_session_parameters/periods/periods_card.html
@@ -25,7 +25,7 @@
                                     Type
                                 </th>
                                 <th scope="col" class = "text-nowrap">
-                                    Yesterday's Min<br>Wrist Minutes
+                                    Wrist Minutes
                                 </th>
                                 <th scope="col" class = "text-nowrap">
                                     Show<br>Survey
