--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -78,7 +78,13 @@
     </div>
 </div>
 
-<div class="row justify-content-center mt-4">
+<div class="row justify-content-center mt-2">
+    <div class="col-md text-center text-muted">
+        <span class="align-middle">The Economic Science Institute collects health and fitness data to study the economics of health decision making.</span>
+    </div>  
+</div>
+
+<div class="row justify-content-center mt-2">
     <div class="col-md text-end text-muted">
         <span class="align-middle">Client [[session_player.player_number]]</span>
     </div>  
