--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -93,7 +93,7 @@
                     <span v-if="session_player.checked_in_today">
                         Check In Again <i class="fas fa-check"></i>
                     </span>
-                    <span>
+                    <span v-else>
                         Check In <i class="fas fa-check"></i>
                     </span>
                     
